--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -31,6 +31,7 @@
     <div id="root"></div>
     <diV id="jsxConcept"></diV>
     <diV id="javascriptExpression"></diV>
+    <diV id="mapFunction"></diV>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
