--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -29,9 +29,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <diV id="jsxConcept"></diV>
-    <diV id="javascriptExpression"></diV>
-    <diV id="mapFunction"></diV>
+    <div id="jsxConcept"></div>
+    <div id="javascriptExpression"></div>
+    <div id="mapFunction"></div>
+    <div id="cssJsx"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
