--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -35,6 +35,7 @@
     <div id="mapFunction"></div>
     <div id="cssJsx"></div>
     <div id="Materialui"></div>
+    <div id="State"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
