--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -36,6 +36,7 @@
     <div id="cssJsx"></div>
     <div id="Materialui"></div>
     <div id="State"></div>
+    <div id="Employees"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
