--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -48,5 +48,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 <!-- commited from mobile -->
+<!-- to check termux commit -->
   </body>
 </html>
