--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -48,6 +48,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 <!-- commited from mobile -->
-<!-- to check termux commit -->
+<!-- to check termux commit 2 -->
   </body>
 </html>
