--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -38,6 +38,7 @@
     <div id="State"></div>
     <div id="Employees"></div>
     <div id="Card"></div>
+    <div id="Educator"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
