--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -39,6 +39,7 @@
     <div id="Employees"></div>
     <div id="Card"></div>
     <div id="Educator"></div>
+    <div id="EmployeeSearch"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
