--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -41,6 +41,7 @@
     <div id="Educator"></div>
     <div id="EmployeeSearch"></div>
     <div id="Sample"></div>
+    <div id="Form"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
