Form concepts Day-3

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -42,6 +42,7 @@
     <div id="EmployeeSearch"></div>
     <div id="Sample"></div>
     <div id="Form"></div>
+    <div id="FormValidate"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
