Demo: Performing http POST and DELETE request

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -43,6 +44,10 @@
     <div id="Sample"></div>
     <div id="Form"></div>
     <div id="FormValidate"></div>
+    <div id="Ecart"></div>
+    <div id="SearchBar"></div>
+    <div id="FormRef"></div>
+    <div id="AddAxios"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
